--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,10 @@ include: ['_2016_pages', '_2017_pages']
 plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
+  
+gems:
+- jekyll-sitemap
+- jekyll-seo-tag
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
