--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: II Semana da Matemática
 description: > # this means to ignore newlines until "baseurl:"
-  Your description
+  Testando aqui a descrição contida em _config.yml.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "Your-Link.github.io" # the base hostname & protocol for your site
+url: "https://matematicaifspitp.github.io/semana_matematica2" # the base hostname & protocol for your site
 # Build settings
 markdown: kramdown
 
