--- a/_data/twenty_17/speakers.yml
+++ b/_data/twenty_17/speakers.yml
@@ -1,7 +1,7 @@
-- title: Name
-  name: Name-1
-  subtitle: Position
-  img: TBD.jpg
+- title: Prof. Dr. Eduardo Fontoura Costa
+  name: Eduardo Fontoura Costa
+  subtitle: ICMC-USP
+  img: foto_eduardo.jpg
   thumbnail: TBD.jpg
   alt: Picture of TBD
   topic: Topic
