--- a/_data/twenty_17/speakers.yml
+++ b/_data/twenty_17/speakers.yml
@@ -1,20 +1,20 @@
 - title: Prof. Dr. Eduardo Fontoura Costa
-  name: Eduardo Fontoura Costa
+  name: Name-1
   subtitle: ICMC-USP
   img: foto_eduardo.jpg
-  thumbnail: TBD.jpg
+  thumbnail: foto_eduardo.jpg
   alt: Picture of TBD
-  topic: Topic
-  description: More Info
+  topic: Sistemas estocásticos, otimização e aplicações
+  description: Nesta palestra vamos apresentar um resumo das atividades de pesquisa em otimização e sistemas dinâmicos no ICMC-USP e, em maior nível de detalhamento, alguns dos temas de pesquisa e suas 	aplicações. Vamos falar sobre o uso de teoria de otimização em sistemas dinâmicos estocásticos e, reciprocamente, o uso de sistemas estocásticos em otimização. Também consideraremos as principais motivações, incluindo algumas aplicações reais.
 
-- title: Name
+- title: Prof. Me. Carlos Frank Lima dos Santos
   name: Name-2
-  subtitle: Position
+  subtitle: Doutorando em Biometria UNESP
   img: TBD.jpg
   thumbnail: TBD.jpg
   alt: Picture of TBD
-  topic: Topic
-  description: More Info
+  topic: Problemas e Fenômenos naturais na perspectiva da Modelagem Matemática.
+  description: A modelagem matemática é a área do conhecimento que está relacionada em descrever matematicamente problemas ou fenômenos reais em diversos campos de estudos, com o propósito de prever seu comportamento e propor uma ideia de solução com simulação computacional. O objetivo da modelagem é obter um modelo matemático que seja capaz de representar o problema inicial, visando uma melhor compreensão do mundo real.
 
 - title: Name
   name: Name-3
