--- a/_data/twenty_17/speakers.yml
+++ b/_data/twenty_17/speakers.yml
@@ -10,17 +10,28 @@
 - title: Prof. Me. Carlos Frank Lima dos Santos
   name: Name-2
   subtitle: Doutorando em Biometria UNESP
-  img: TBD.jpg
-  thumbnail: TBD.jpg
+  img: foto_carlos.gif
+  thumbnail: foto_carlos.gif
   alt: Picture of TBD
-  topic: Problemas e Fenômenos naturais na perspectiva da Modelagem Matemática.
+  topic: Problemas e Fenômenos naturais na perspectiva da Modelagem Matemática
   description: A modelagem matemática é a área do conhecimento que está relacionada em descrever matematicamente problemas ou fenômenos reais em diversos campos de estudos, com o propósito de prever seu comportamento e propor uma ideia de solução com simulação computacional. O objetivo da modelagem é obter um modelo matemático que seja capaz de representar o problema inicial, visando uma melhor compreensão do mundo real.
 
-- title: Name
+- title: Prof. Me. Ana Karina Cancian Baroni
   name: Name-3
-  subtitle: Position
-  img: TBD.jpg
-  thumbnail: TBD.jpg
+  subtitle: IFSP - Campus Capivari
+  img: foto_ana.png
+  thumbnail: foto_ana.png
   alt: Picture of TBD
-  topic: Topic
-  description: More Info
+  topic: Educação Financeira - espaços e possibilidades para as aulas de Matemática
+  description: O objetivo é promover uma reflexão sobre a prática docente da Matemática, diante das novas demandas para o trabalho com a Educação Financeira no Ensino Fundamental e Médio. Partindo de exemplos práticos e cotidianos, serão discutidas questões relacionadas ao consumo e endividamento, planejamento financeiro e estratégias para empréstimo e aplicação de recursos financeiros.
+
+-
+
+- title: Prof. Dra. Diana Patricia Ferreira de Santana
+  name: Name-4
+  subtitle: IFPR Campus Ivaiporã
+  img: foto_Diana.bmp
+  thumbnail: foto_Diana.bmp
+  alt: Picture of TBD
+  topic: Matemática e Literatura - Uma experiência interdisciplinar
+  description: Este trabalho é resultado de uma prática de aula cujo propósito preliminar era utilizar as metáforas matemáticas presente em certas obras literárias para estudar alguns conceitos matemáticos tais  como -  ponto, reta, plano, polígonos, enunciados lógicos, objetos em primeira, segunda e terceira dimensão, entre outros. Entretanto, o contato com essa literatura mostrou-se deveras enriquecedor propiciando debates com outras áreas do conhecimento e oportunizando um espaço de experiência interdisciplinar.
