--- a/_data/twenty_17/home_about_data.yml
+++ b/_data/twenty_17/home_about_data.yml
@@ -1,31 +1,31 @@
 - inverted: 
   img: icon-about.jpeg
-  name: Theme, Vision, Mission
-  info: Read more about our Theme, Vision, and Mission
+  name: Tema, visão e missão
+  info: Saiba mais sobre o nosso tema, visão e missão 
   link: /about
 
 - inverted: timeline-inverted
   img: icon-agenda.jpeg
   name: Agenda
-  info: Check out the agenda
+  info: Confira a agenda da 2ª SEMATIF
   link: /agenda
 
 - inverted: 
   img: icon-team.jpeg
-  name: Team
-  info: Find out the team members
+  name: Comissão
+  info: Comissão organizadora
   link: /team
 
 - inverted: timeline-inverted
   img: icon-venue.jpeg
-  name: Venue
-  info: Learn more about our location
+  name: Localização
+  info: Saiba mais sobre a localização deste evento
   link: /venue
 
 - inverted: 
   img: icon-faq.jpeg
   name: FAQs
-  info: Have a Question? Many answers can be found right here in our FAQs
+  info: Alguma dúvida? Veja se encontra algo aqui (FAQs)
   link: /faqs
 
 - inverted: timeline-inverted
