--- a/_data/twenty_17/speakers.yml
+++ b/_data/twenty_17/speakers.yml
@@ -16,7 +16,7 @@
   topic: Problemas e Fenômenos naturais na perspectiva da Modelagem Matemática
   description: A modelagem matemática é a área do conhecimento que está relacionada em descrever matematicamente problemas ou fenômenos reais em diversos campos de estudos, com o propósito de prever seu comportamento e propor uma ideia de solução com simulação computacional. O objetivo da modelagem é obter um modelo matemático que seja capaz de representar o problema inicial, visando uma melhor compreensão do mundo real.
 
-- title: Prof. Me. Ana Karina Cancian Baroni
+- title: Profa. Me. Ana Karina Cancian Baroni
   name: Name-3
   subtitle: IFSP - Campus Capivari
   img: foto_ana.png
@@ -27,9 +27,9 @@
 
 -
 
-- title: Prof. Dra. Diana Patricia Ferreira de Santana
+- title: Profa. Dra. Diana Patricia Ferreira de Santana
   name: Name-4
-  subtitle: IFPR Campus Ivaiporã
+  subtitle: IFPR - Campus Ivaiporã
   img: foto_Diana.bmp
   thumbnail: foto_Diana.bmp
   alt: Picture of TBD
