--- a/_data/twenty_17/minicursos.yml
+++ b/_data/twenty_17/minicursos.yml
@@ -15,3 +15,12 @@
   alt: Picture of TBD
   topic: As praticidades da edição de texto e equações no Latex
   description: Nesse minicurso serão apresentadas as diferenças entre editores de texto compilados e suas praticidades bem como as diferenças com outras ferramentas. A plataforma utilizada será o sharelatex que é um editor online de textos. As atividades serão realizadas dentro de um laboratório de informática para que o cursista tenha o contato imediato com a ferramenta.
+
+- title: Prof. Dr. Guilherme Andolfatto Libanori
+  name: Name-7
+  subtitle: IFSP - Campus Matão.
+  img: TBD.jpg
+  thumbnail: TBD.jpg
+  alt: Picture of TBD
+  topic: As potencialidades do jogo no ensino de Matemática - jogos com materiais recicláveis
+  description: Discussão das potencialidades, usos e desusos dos jogos no ensino de Matemática e reutilização de materiais recicláveis para construção de jogos matemáticos em sala de aula.
