--- a/_data/twenty_17/faqs.yml
+++ b/_data/twenty_17/faqs.yml
@@ -1,14 +1,14 @@
-- question: Question 1
-  answer: Answer to Question 1
+- question: Posso fazer a minha inscrição para o evento presencialmente?
+  answer: Não, as inscrições deverão ser realizadas obrigatóriamente através do site do Worktech 2018 (disponível no início dessa página).
 
-- question: Question 2
-  answer: Answer to Question 2
+- question: Posso participar de mais de um minicurso?
+  answer: Não. Como os minicursos serão simultâneos, cada aluno poderá se inscrever em apenas 1 minicurso.
 
-- question: Question 3
-  answer: Answer to Question 3
+- question: Posso assistir as palestras e participar das gincanas, mas não assistir a um minicurso?
+  answer: Sim. As inscrições para palestras e gincanas serão separadas dos minicursos. O aluno deverá se inscrever naquele minicurso que mais lhe interessa.
 
-- question: Question 4
-  answer: Answer to Question 4
+- question: Não me inscrevi para o evento. Posso participar?
+  answer: Não. As atividades (palestras, minicursos, gincana e coffe-break) apenas estarão disponíveis para participantes inscritos na 2ª SEMATIF.
 
-- question: Question 5
-  answer: Answer to Question 5
+- question: Não me inscrevi para o minicurso mas resolvi ("de última hora") participar. Posso assistir/ganhar certificado?
+  answer: Nesse caso o aluno poderá assistir ao minicurso desde que haja vagas na sala. As inscrições são limitadas ao número de vagas. O participante que não se inscreveu para o minicurso não ganhará certificado, mesmo que tenha assistido ao minicurso. A lista de presença apenas controlará a frequência dos alunos INSCRITOS no minicurso.
