--- a/_data/twenty_17/minicursos.yml
+++ b/_data/twenty_17/minicursos.yml
@@ -19,8 +19,8 @@
 - title: Prof. Dr. Guilherme Andolfatto Libanori
   name: Name-7
   subtitle: IFSP - Campus Matão.
-  img: TBD.jpg
-  thumbnail: TBD.jpg
+  img: guilherme.jpeg
+  thumbnail: guilherme.jpeg
   alt: Picture of TBD
   topic: As potencialidades do jogo no ensino de Matemática - jogos com materiais recicláveis
   description: Discussão das potencialidades, usos e desusos dos jogos no ensino de Matemática e reutilização de materiais recicláveis para construção de jogos matemáticos em sala de aula.
