--- a/_data/twenty_17/agendas_4.yml
+++ b/_data/twenty_17/agendas_4.yml
@@ -1,17 +1,17 @@
-- time: 19:00 - 19:45
-  info: "<u>GINCANA 1 - </u><br><br>Local: XXXXX"
+- time: 19:00 - 19:30
+  info: "<u>Gincana 1: Tamgram</u><br><br> Por meio de peças do Tangram, disponibilizadas em grupos, serão desenvolvidos dinâmicas e desafios com confecções de imagens, ganhando o grupo que terminar com maior qualidade e menos tempo! </u><br><br>Local: a definir"
 
-- time: 19:45 - 20:30
-  info: "<u>GINCANA 2 - </u><br><br>Local: XXXXX"
+- time: 19:40 - 20:20
+  info: "<u>Gincana 2: Kahoot!</u><br><br>Utilizando o aplicativo “Kahoot!”, os alunos participarão de uma competição de conhecimentos gerais. </u><br><br>Local: a definir"
 
-- time: 20:30 - 20:45
+- time: 20:20 - 21:00
   info: "<u>COFFE-BREAK</u><br>Espaço do Auditório de Informática"
 
-- time: 20:45 - 21:30
-  info: "<u>GINCANA 3 - </u><br><br>Local: XXXXX"
+- time: 21:00 - 21:30
+  info: "<u>Gincana 3: Stop</u><br><br>Com os grupos organizados, serão disponibilizadas cartelas de jogo contendo operações. Após a enunciação de um número, estes solucionarão as mesmas, dizendo stop ao terminar. Ganhará o grupo que tiver maior número de acertos/pontos. </u><br><br>Local: a definir"
 
 - time: 21:30 - 22:15
-  info: "<u>GINCANA 4 - </u><br><br>Local: XXXXX"
+  info: "<u>Gincana 4: Torta na cara</u><br><br>Organizada a ordem de participação das pessoas pelos grupos, estas responderão as questões propostas somente após sua enunciação pelo mediador da atividade e terem acionado o botão contido na plataforma. O prazo para o pronunciamento da resposta é de 30 minutos. Os pontos serão distribuídos de acordo com os seguintes critérios: rapidez, número de acerto e mudança de grupo a responder. </u><br><br>Local: a definir"
 
 - time: 22:15 - 22:30
   info: "<u>ENCERRAMENTO</u><br><b>Prof. Me. Paulo Henrique Correia A. da Cruz</b><br><i>IFSP - Itapetininga</i><br><br>Local: Auditório de Informática"
