--- a/_data/twenty_17/minicursos.yml
+++ b/_data/twenty_17/minicursos.yml
@@ -10,8 +10,8 @@
 - title: Prof. Dr. Vicente Pereira de Barros
   name: Name-6
   subtitle: IFSP - Campus Itapetininga.
-  img: vicente.gif
-  thumbnail: vicente.gif
+  img: vicente_2.gif
+  thumbnail: vicente_2.gif
   alt: Picture of TBD
   topic: As praticidades da edição de texto e equações no Latex
   description: Nesse minicurso serão apresentadas as diferenças entre editores de texto compilados e suas praticidades bem como as diferenças com outras ferramentas. A plataforma utilizada será o sharelatex que é um editor online de textos. As atividades serão realizadas dentro de um laboratório de informática para que o cursista tenha o contato imediato com a ferramenta.
