--- a/_data/twenty_17/speakers.yml
+++ b/_data/twenty_17/speakers.yml
@@ -10,8 +10,8 @@
 - title: Prof. Me. Carlos Frank Lima dos Santos
   name: Name-2
   subtitle: Doutorando em Biometria UNESP
-  img: foto_carlos.gif
-  thumbnail: foto_carlos.gif
+  img: foto_carlos_2.gif
+  thumbnail: foto_carlos_2.gif
   alt: Picture of TBD
   topic: Problemas e Fenômenos naturais na perspectiva da Modelagem Matemática
   description: A modelagem matemática é a área do conhecimento que está relacionada em descrever matematicamente problemas ou fenômenos reais em diversos campos de estudos, com o propósito de prever seu comportamento e propor uma ideia de solução com simulação computacional. O objetivo da modelagem é obter um modelo matemático que seja capaz de representar o problema inicial, visando uma melhor compreensão do mundo real.
