Fotos Victor e Ayumi. Correcoes ortograficas.

--- a/_data/twenty_17/agendas_2.yml
+++ b/_data/twenty_17/agendas_2.yml
@@ -8,7 +8,7 @@
   info: "<u>AS POTENCIALIDADES DO JOGO NO ENSINO DE MATEMÁTICA - JOGOS COM MATERIAIS RECICLÁVEIS</u><br><b>Prof. Dr. Guilherme Andolfatto Libanori</b><br><i>IFSP - Matão</i><br><br>Minicurso 3 - Parte 1</i><br>Local: Sala a definir"
 
 - time: 20:30 - 20:45
-  info: "<u>COFFE-BREAK</u><br>Espaço do Auditório de Informática"
+  info: "<u>COFFEE-BREAK</u><br>Sala 65"
 
 - time: 20:45 - 22:00
   info: "<u>EXPLORANDO AS FUNCIONALIDADES DE UMA CALCULADORA CIENTÍFICA</u><br><b>Prof. Me. Matheus Moreira Costa</b><br><i>IFSP - Itapetininga</i><br><br>Minicurso 1 - Parte 2</i><br>Local: Sala a definir"
