--- a/_data/twenty_17/agendas_3.yml
+++ b/_data/twenty_17/agendas_3.yml
@@ -2,7 +2,7 @@
   info: "<u>SISTEMAS ESTOCÁSTICOS, OTIMIZAÇÃO E APLICAÇÕES</u><br><b>Prof. Dr. Eduardo Fontoura Costa</b><br><i>ICMC - USP</i><br><br>Palestra 3</i><br>Local: Auditório de Informática"
 
 - time: 20:30 - 20:45
-  info: "<u>COFFE-BREAK</u><br>Espaço do Auditório de Informática"
+  info: "<u>COFFEE-BREAK</u><br>Sala 65"
 
 - time: 20:45 - 22:00
   info: "<u>MATEMÁTICA E LITERATURA: UMA EXPERIÊNCIA INTERDISCIPLINAR</u><br><b>Profa. Dra. Diana Patricia Ferreira de Santana</b><br><i>IFPR - Ivaiporã</i><br><br>Palestra 4</i><br>Local: Auditório de Informática"
