--- a/_data/twenty_17/teams.yml
+++ b/_data/twenty_17/teams.yml
@@ -1,8 +1,8 @@
 - title: Profa. Me. Ayumi Kato de Campos
   name: Name-1
   subtitle: IFSP - Itapetininga (MAT-ITP)
-  img: TBD.jpg
-  thumbnail: TBD.jpg
+  img: ayumi.jpg
+  thumbnail: ayumi.jpg
   alt: Picture of TBD
   topic: 
   description: Presidenta da comissão organizadora da 2ª SEMATIF
@@ -10,8 +10,8 @@
 - title: Prof. Me. Victor Vaz Pavani
   name: Name-2
   subtitle: IFSP - Itapetininga (MAT-ITP)
-  img: foto_matheus.gif
-  thumbnail: foto_matheus.gif
+  img: victor.gif
+  thumbnail: victor.gif
   alt: Picture of TBD
   topic: 
   description: Membro da comissão organizadora da 2ª SEMATIF
@@ -28,8 +28,8 @@
 - title: Prof. Me. Matheus Moreira Costa
   name: Name-4
   subtitle: IFSP - Itapetininga (MAT-ITP)
-  img: TBD.jpg
-  thumbnail: TBD.jpg
+  img: foto_matheus.jpg
+  thumbnail: foto_matheus.jpg
   alt: Picture of TBD
   topic:
   description: Membro da comissão organizadora da 2ª SEMATIF
