correcao de extensao de arquivos de imagem

--- a/_data/twenty_17/teams.yml
+++ b/_data/twenty_17/teams.yml
@@ -10,8 +10,8 @@
 - title: Prof. Me. Victor Vaz Pavani
   name: Name-2
   subtitle: IFSP - Itapetininga (MAT-ITP)
-  img: victor.gif
-  thumbnail: victor.gif
+  img: victor.jpg
+  thumbnail: victor.jpg
   alt: Picture of TBD
   topic: 
   description: Membro da comissão organizadora da 2ª SEMATIF
@@ -28,8 +28,8 @@
 - title: Prof. Me. Matheus Moreira Costa
   name: Name-4
   subtitle: IFSP - Itapetininga (MAT-ITP)
-  img: foto_matheus.jpg
-  thumbnail: foto_matheus.jpg
+  img: foto_matheus.gif
+  thumbnail: foto_matheus.gif
   alt: Picture of TBD
   topic:
   description: Membro da comissão organizadora da 2ª SEMATIF
