alteracao resolucao fotos comissao organizadora

--- a/_data/twenty_17/teams.yml
+++ b/_data/twenty_17/teams.yml
@@ -10,8 +10,8 @@
 - title: Prof. Me. Victor Vaz Pavani
   name: Name-2
   subtitle: IFSP - Itapetininga (MAT-ITP)
-  img: victor.jpg
-  thumbnail: victor.jpg
+  img: victor_2.jpg
+  thumbnail: victor_2.jpg
   alt: Picture of TBD
   topic: 
   description: Membro da comissão organizadora da 2ª SEMATIF
@@ -19,8 +19,8 @@
 - title: Prof. Dr. Rafael Massambone de Oliveira
   name: Name-3
   subtitle: IFSP - Itapetininga (MAT-ITP)
-  img: rafael.jpg
-  thumbnail: rafael.jpg
+  img: rafael_2.jpg
+  thumbnail: rafael_2.jpg
   alt: Picture of TBD
   topic:
   description: Membro da comissão organizadora da 2ª SEMATIF
@@ -28,8 +28,8 @@
 - title: Prof. Me. Matheus Moreira Costa
   name: Name-4
   subtitle: IFSP - Itapetininga (MAT-ITP)
-  img: foto_matheus.gif
-  thumbnail: foto_matheus.gif
+  img: foto_matheus_2.gif
+  thumbnail: foto_matheus_2.gif
   alt: Picture of TBD
   topic:
   description: Membro da comissão organizadora da 2ª SEMATIF
@@ -37,8 +37,8 @@
 - title: Corpo discente
   name: Name-5
   subtitle: IFSP - Itapetininga (MAT-ITP)
-  img: TBD.jpg
-  thumbnail: TBD.jpg
+  img: TBD_2.jpg
+  thumbnail: TBD_2.jpg
   alt: Picture of TBD
   topic:
   description: Amanda Fogaça Correa, Amanda C. Fernandes Fogaça, Ana Vitória D. Bressanini, Andressa Said Correa, Daiara Gomes Padilha, Francine Targa de Lima.
