nomes do corpo discente

--- a/_data/twenty_17/teams.yml
+++ b/_data/twenty_17/teams.yml
@@ -41,4 +41,4 @@
   thumbnail: TBD_2.jpg
   alt: Picture of TBD
   topic:
-  description: Amanda Fogaça Correa, Amanda C. Fernandes Fogaça, Ana Vitória D. Bressanini, Andressa Said Correa, Daiara Gomes Padilha, Francine Targa de Lima.
+  description: Amanda - 4º sem, Amanda - 2º sem, Ana Vitoria - 4º sem, Andressa - 2º sem, Daiara - 2º sem, Enzo - 2º sem, Francine - 2º sem, João - 4º sem, Kathleen - 4º sem, Keithilly - 4º sem, Lucas - 6º sem, Luciana - 4º sem, Marcelo - 4º sem, Priscila - 4º sem, Veronica - 4º sem, Victor - 2º sem.
