teste com as fotos

--- a/_data/twenty_17/minicursos.yml
+++ b/_data/twenty_17/minicursos.yml
@@ -1,8 +1,8 @@
 - title: Prof. Me. Matheus Moreira Costa
   name: Name-5
   subtitle: IFSP - Campus Itapetininga.
-  img: foto_matheus.gif
-  thumbnail: foto_matheus.gif
+  img: TBD.jpg
+  thumbnail: TBD.jpg
   alt: Picture of TBD
   topic: Explorando as funcionalidades de uma calculadora científica
   description: Nesse minicurso serão apresentadas as principais ferramentas e funções da calculadora científica Casio fx-82ms e similares. Será possível   descobrir o significado de todos as teclas da sua calculadora e aprender a utilizar todos estes recursos de maneira adequada.
@@ -10,8 +10,8 @@
 - title: Prof. Dr. Vicente Pereira de Barros
   name: Name-6
   subtitle: IFSP - Campus Itapetininga.
-  img: vicente_2.gif
-  thumbnail: vicente_2.gif
+  img: TBD.jpg
+  thumbnail: TBD.jpg
   alt: Picture of TBD
   topic: As praticidades da edição de texto e equações no Latex
   description: Nesse minicurso serão apresentadas as diferenças entre editores de texto compilados e suas praticidades bem como as diferenças com outras ferramentas. A plataforma utilizada será o sharelatex que é um editor online de textos. As atividades serão realizadas dentro de um laboratório de informática para que o cursista tenha o contato imediato com a ferramenta.
@@ -19,8 +19,8 @@
 - title: Prof. Dr. Guilherme Andolfatto Libanori
   name: Name-7
   subtitle: IFSP - Campus Matão.
-  img: guilherme.jpeg
-  thumbnail: guilherme.jpeg
+  img: TBD.jpg
+  thumbnail: TBD.jpg
   alt: Picture of TBD
   topic: As potencialidades do jogo no ensino de Matemática - jogos com materiais recicláveis
   description: Discussão das potencialidades, usos e desusos dos jogos no ensino de Matemática e reutilização de materiais recicláveis para construção de jogos matemáticos em sala de aula.
