--- a/_data/twenty_17/speakers.yml
+++ b/_data/twenty_17/speakers.yml
@@ -1,8 +1,8 @@
 - title: Profa. Dra. Diana Patricia Ferreira de Santana
   name: Name-1
   subtitle: IFPR - Campus Ivaiporã
-  img: foto_Diana_2.bmp
-  thumbnail: foto_Diana_2.bmp
+  img: TBD.jpg
+  thumbnail: TBD.jpg
   alt: Picture of TBD
   topic: Matemática e Literatura - Uma experiência interdisciplinar
   description: Este trabalho é resultado de uma prática de aula cujo propósito preliminar era utilizar as metáforas matemáticas presente em certas obras literárias para estudar alguns conceitos matemáticos tais  como -  ponto, reta, plano, polígonos, enunciados lógicos, objetos em primeira, segunda e terceira dimensão, entre outros. Entretanto, o contato com essa literatura mostrou-se deveras enriquecedor propiciando debates com outras áreas do conhecimento e oportunizando um espaço de experiência interdisciplinar.
@@ -10,8 +10,8 @@
 - title: Prof. Dr. Eduardo Fontoura Costa
   name: Name-2
   subtitle: ICMC-USP
-  img: foto_eduardo_2.jpg
-  thumbnail: foto_eduardo_2.jpg
+  img: TBD.jpg
+  thumbnail: TBD.jpg
   alt: Picture of TBD
   topic: Sistemas estocásticos, otimização e aplicações
   description: Nesta palestra vamos apresentar um resumo das atividades de pesquisa em otimização e sistemas dinâmicos no ICMC-USP e, em maior nível de detalhamento, alguns dos temas de pesquisa e suas 	aplicações. Vamos falar sobre o uso de teoria de otimização em sistemas dinâmicos estocásticos e, reciprocamente, o uso de sistemas estocásticos em otimização. Também consideraremos as principais motivações, incluindo algumas aplicações reais.
@@ -19,8 +19,8 @@
 - title: Prof. Me. Carlos Frank Lima dos Santos
   name: Name-3
   subtitle: Doutorando em Biometria UNESP
-  img: foto_carlos_3.gif
-  thumbnail: foto_carlos_3.gif
+  img: TBD.jpg
+  thumbnail: TBD.jpg
   alt: Picture of TBD
   topic: Problemas e Fenômenos naturais na perspectiva da Modelagem Matemática
   description: A modelagem matemática é a área do conhecimento que está relacionada em descrever matematicamente problemas ou fenômenos reais em diversos campos de estudos, com o propósito de prever seu comportamento e propor uma ideia de solução com simulação computacional. O objetivo da modelagem é obter um modelo matemático que seja capaz de representar o problema inicial, visando uma melhor compreensão do mundo real.
@@ -28,8 +28,8 @@
 - title: Profa. Me. Ana Karina Cancian Baroni
   name: Name-4
   subtitle: IFSP - Campus Capivari
-  img: foto_ana_2.png
-  thumbnail: foto_ana_2.png
+  img: TBD.jpg
+  thumbnail: TBD.jpg
   alt: Picture of TBD
   topic: Educação Financeira - espaços e possibilidades para as aulas de Matemática
   description: O objetivo é promover uma reflexão sobre a prática docente da Matemática, diante das novas demandas para o trabalho com a Educação Financeira no Ensino Fundamental e Médio. Partindo de exemplos práticos e cotidianos, serão discutidas questões relacionadas ao consumo e endividamento, planejamento financeiro e estratégias para empréstimo e aplicação de recursos financeiros.
