--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ facebook:
 logo: "../css/2016_style/img/sematif4.png"
 
 social: 
-  name: Your Facebook Page
-  link: "https://www.facebook.com/"
+  name: Facebook Page
+  link: "https://pt-br.facebook.com/IFSPItapetininga/"
 
-google_site_verification: googleXXXXXXXXXXXXXXXX.html
+google_site_verification: google0496d01d73be33b9.html
 
 include: ['_2016_pages', '_2017_pages']
 
@@ -26,9 +26,9 @@ plugins:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: facebook
-    url: https://www.facebook.com
+    url: https://pt-br.facebook.com/IFSPItapetininga/
   - title: twitter
-    url: https://twitter.com
+    url: https://twitter.com/ifspitape
 
 # Build settings
 markdown: kramdown
