--- a/_data/twenty_17/agendas_2.yml
+++ b/_data/twenty_17/agendas_2.yml
@@ -1,20 +1,20 @@
 - time: 19:15 - 20:30
-  info: "<u>EXPLORANDO AS FUNCIONALIDADES DE UMA CALCULADORA CIENTÍFICA</u><br><b>Prof. Me. Matheus Moreira Costa</b><br><i>IFSP - Itapetininga</i><br><br>Minicurso 1 - Parte 1</i><br>Local: Sala a definir"
+  info: "<u>EXPLORANDO AS FUNCIONALIDADES DE UMA CALCULADORA CIENTÍFICA</u><br><b>Prof. Me. Matheus Moreira Costa</b><br><i>IFSP - Itapetininga</i><br><br>Minicurso 1 - Parte 1</i><br>Local: Sala 61"
 
 - time: 19:15 - 20:30
-  info: "<u>AS PRATICIDADES DA EDIÇÃO DE TEXTO E EQUAÇÕES NO LATEX</u><br><b>Prof. Dr. Vicente Pereira de Barros</b><br><i>IFSP - Itapetininga</i><br><br>Minicurso 2 - Parte 1</i><br>Local: Sala a definir"
+  info: "<u>AS PRATICIDADES DA EDIÇÃO DE TEXTO E EQUAÇÕES NO LATEX</u><br><b>Prof. Dr. Vicente Pereira de Barros</b><br><i>IFSP - Itapetininga</i><br><br>Minicurso 2 - Parte 1</i><br>Local: Laboratório B"
 
 - time: 19:15 - 20:30
-  info: "<u>AS POTENCIALIDADES DO JOGO NO ENSINO DE MATEMÁTICA - JOGOS COM MATERIAIS RECICLÁVEIS</u><br><b>Prof. Dr. Guilherme Andolfatto Libanori</b><br><i>IFSP - Matão</i><br><br>Minicurso 3 - Parte 1</i><br>Local: Sala a definir"
+  info: "<u>AS POTENCIALIDADES DO JOGO NO ENSINO DE MATEMÁTICA - JOGOS COM MATERIAIS RECICLÁVEIS</u><br><b>Prof. Dr. Guilherme Andolfatto Libanori</b><br><i>IFSP - Matão</i><br><br>Minicurso 3 - Parte 1</i><br>Local: Auditório da Informática"
 
 - time: 20:30 - 20:45
   info: "<u>COFFEE-BREAK</u><br>Sala 65"
 
 - time: 20:45 - 22:00
-  info: "<u>EXPLORANDO AS FUNCIONALIDADES DE UMA CALCULADORA CIENTÍFICA</u><br><b>Prof. Me. Matheus Moreira Costa</b><br><i>IFSP - Itapetininga</i><br><br>Minicurso 1 - Parte 2</i><br>Local: Sala a definir"
+  info: "<u>EXPLORANDO AS FUNCIONALIDADES DE UMA CALCULADORA CIENTÍFICA</u><br><b>Prof. Me. Matheus Moreira Costa</b><br><i>IFSP - Itapetininga</i><br><br>Minicurso 1 - Parte 2</i><br>Local: Sala 61"
 
 - time: 20:45 - 22:00
-  info: "<u>AS PRATICIDADES DA EDIÇÃO DE TEXTO E EQUAÇÕES NO LATEX</u><br><b>Prof. Dr. Vicente Pereira de Barros</b><br><i>IFSP - Itapetininga</i><br><br>Minicurso 2 - Parte 2</i><br>Local: Sala a definir"
+  info: "<u>AS PRATICIDADES DA EDIÇÃO DE TEXTO E EQUAÇÕES NO LATEX</u><br><b>Prof. Dr. Vicente Pereira de Barros</b><br><i>IFSP - Itapetininga</i><br><br>Minicurso 2 - Parte 2</i><br>Local: Laboratório B"
 
 - time: 20:45 - 22:00
-  info: "<u>AS POTENCIALIDADES DO JOGO NO ENSINO DE MATEMÁTICA - JOGOS COM MATERIAIS RECICLÁVEIS</u><br><b>Prof. Dr. Guilherme Andolfatto Libanori</b><br><i>IFSP - Matão</i><br><br>Minicurso 3 - Parte 2</i><br>Local: Sala a definir"
+  info: "<u>AS POTENCIALIDADES DO JOGO NO ENSINO DE MATEMÁTICA - JOGOS COM MATERIAIS RECICLÁVEIS</u><br><b>Prof. Dr. Guilherme Andolfatto Libanori</b><br><i>IFSP - Matão</i><br><br>Minicurso 3 - Parte 2</i><br>Local: Auditório da Informática"
